--- a/home.css
+++ b/home.css
@@ -3,17 +3,16 @@ body {
   margin: 0;
   padding: 0;
   /* background-image: url("img/homebackground.png"); */
-  
+
   background-size: 500px 500px;
   background-repeat: repeat;
 }
 
 header {
-  
   color: white;
   /* background-color: rgb(200,217,237); */
-   background-color: rgb(193,216,240);
-   /* box-shadow: inset -3px -5px 20px 0px rgba(15, 14, 14, 0.153) */
+  background-color: rgba(180, 180, 180, 0.274);
+  /* box-shadow: inset -3px -5px 20px 0px rgba(15, 14, 14, 0.153) */
 }
 
 nav {
@@ -21,7 +20,6 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 1em 2em;
-   
 }
 
 .brand a {
@@ -37,18 +35,25 @@ nav ul {
   margin: 10px;
   padding: 10px;
   display: flex;
-  
+
   /* display: none; */
 }
 
 nav ul li {
-  margin: 0 1em;
+  margin: 0 10px;
 }
 
 nav ul li a {
   color: black;
   text-decoration: none;
+  padding: 4px;
+  margin: 4px;
+
   /* font-weight: bold; */
+}
+nav ul li:nth-child(5) a {
+  border: 2px solid rgb(121, 121, 121);
+  border-radius: 5px;
 }
 
 nav ul li a:hover {
@@ -56,7 +61,7 @@ nav ul li a:hover {
 }
 
 footer {
-  background-color: rgb(193,216,240);
+  background-color: rgba(180, 180, 180, 0.274);
   /* background-color: whitesmoke; */
   color: black;
   text-align: center;
@@ -93,36 +98,48 @@ footer {
   padding-bottom: 50px; /* Space for the fixed footer */
   /* background: linear-gradient( rgb(210,222,235),rgb(200,217,237),rgb(193,216,240)); */
   background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
 }
 
 .top {
-  height: 15em;
+  height: 20em;
   background-color: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
   /* box-shadow: 2px 20px 2px 1px rgba(0, 0, 0, 0.37); */
-  border-radius: 0px 0px 100px 100px; 
-  background-color: rgb(193,216,240)
+  border-radius: 0px 0px 100px 100px;
 }
 .topLeft {
   height: 100%;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-
-
+  flex-direction: column;
+  align-items: normal;
+  justify-content: flex-start;
 }
 
 .tagLine {
-  font-size: 6em;
-  font-family: "Pacifico", cursive;
-  margin: 1em;
+  font-size: 4em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 19px;
   padding: 10px;
   border-radius: 50px;
   color: rgb(8, 8, 8);
-  text-align: center;
+  /* text-align: center; */
+}
+.offers{
+  margin: 19px;
+  margin-top: 4px;
+  margin-left: 1em;
+  padding: 4px 10px;
+  font-size: 30px;
+  color: rgba(81, 81, 81, 0.993);
+  border: 2px solid black;
+  width: fit-content;
+  border-radius: 8px;
 }
 .bottom {
   margin-top: 2em;
@@ -138,74 +155,65 @@ footer {
   height: 20em;
   margin: 10px;
   width: 20em;
- 
   border-radius: 30px;
-  
 }
-.card:hover{
-   cursor: pointer;
-   
+.card:hover {
+  cursor: pointer;
 }
-h2{
+h2 {
   color: azure;
   backdrop-filter: brightness(40%);
   padding: 4px;
   width: 100%;
 }
-.policy ul{
-   list-style-type: none;
-   
+.policy ul {
+  list-style-type: none;
 }
-.policy ul li{
+.policy ul li {
   margin: 4px 10px;
   float: left;
 }
-.policy ul li a{
+.policy ul li a {
   text-decoration: none;
   color: black;
-  
 }
-.policy ul li a:hover{
+.policy ul li a:hover {
   text-decoration: underline;
   color: black;
-  
 }
 
 @media only screen and (max-width: 1200px) {
   .tagLine {
     font-size: 4em;
   }
-  .bottom{
-     grid-template-columns: auto auto auto ;
+  .bottom {
+    grid-template-columns: auto auto auto;
   }
 }
 
 @media only screen and (max-width: 1000px) {
-    .tagLine {
+  .tagLine {
     font-size: 4em;
   }
-  .bottom{
-       grid-template-columns: auto auto;
+  .bottom {
+    grid-template-columns: auto auto;
   }
-  
 }
 @media only screen and (max-width: 500px) {
-    .tagLine {
+  .tagLine {
     font-size: 3em;
   }
-  header{
+  header {
     width: 100%;
   }
-  .nav{
-        padding: 1em 1em;
+  .nav {
+    padding: 1em 1em;
   }
-  .bottom{
-      display: none;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-
+  .bottom {
+    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-  
 }
