--- a/products.css
+++ b/products.css
@@ -2,13 +2,21 @@ body{
     margin: 0px;
     padding: 0px;
 }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  /* background-image: url("img/homebackground.png"); */
+
+  background-size: 500px 500px;
+  background-repeat: repeat;
+}
 
 header {
-  
   color: white;
   /* background-color: rgb(200,217,237); */
-   background-color: rgb(193,216,240);
-   /* box-shadow: inset -3px -5px 20px 0px rgba(15, 14, 14, 0.153) */
+  background-color: rgba(180, 180, 180, 0.274);
+  /* box-shadow: inset -3px -5px 20px 0px rgba(15, 14, 14, 0.153) */
 }
 
 nav {
@@ -16,7 +24,6 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 1em 2em;
-   
 }
 
 .brand a {
@@ -28,32 +35,36 @@ nav {
 }
 
 nav ul {
-  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;   */
-  font-family: Arial, Helvetica, sans-serif;
   list-style-type: none;
   margin: 10px;
   padding: 10px;
   display: flex;
-  
+
   /* display: none; */
 }
 
 nav ul li {
-  margin: 0 1em;
+  margin: 0 10px;
 }
 
 nav ul li a {
   color: black;
   text-decoration: none;
+  padding: 4px;
+  margin: 4px;
+
   /* font-weight: bold; */
+}
+nav ul li:nth-child(5) a {
+  border: 2px solid rgb(121, 121, 121);
+  border-radius: 5px;
 }
 
 nav ul li a:hover {
   text-decoration: underline;
 }
-
 footer {
-  background-color: rgb(193,216,240);
+   background-color: rgba(180, 180, 180, 0.274);
   /* background-color: whitesmoke; */
   color: black;
   text-align: center;
