--- a/product/products.css
+++ b/product/products.css
@@ -1,119 +1,48 @@
-body{
-    margin: 0px;
-    padding: 0px;
-}
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  /* background-image: url("img/homebackground.png"); */
-
-  background-size: 500px 500px;
-  background-repeat: repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  border: 2px solid black;
 }
 
 header {
-  color: white;
-  /* background-color: rgb(200,217,237); */
-  background-color: rgba(180, 180, 180, 0.274);
-  /* box-shadow: inset -3px -5px 20px 0px rgba(15, 14, 14, 0.153) */
+  /* border: 2px solid grey; */
+  width: 70%;
+  margin: 1rem;
 }
-
 nav {
+  border: 2px solid red;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 1em 2em;
+  align-items: center;
+  margin: 0.5rem;
 }
-
-.brand a {
-  font-size: 1.5em;
-  color: rgb(16, 3, 3);
-  text-decoration: none;
+.brand {
   font-family: "Goudy Bookletter 1911", serif;
   font-family: "Pacifico", cursive;
+  color: black;
 }
-
+.brand a {
+  text-decoration: none;
+  color: black;
+  font-size: large;
+}
 nav ul {
-  list-style-type: none;
-  margin: 10px;
-  padding: 10px;
   display: flex;
-
-  /* display: none; */
+  align-items: center;
+  gap: 1.5rem;
 }
-
 nav ul li {
-  margin: 0 10px;
+  list-style: none;
+  /* border: 2px solid blue; */
+  padding: 0.5rem;
+  margin-right: 0.5rem;
+  border-radius: 10px;
 }
-
 nav ul li a {
-  color: black;
   text-decoration: none;
-  padding: 4px;
-  margin: 4px;
-
-  /* font-weight: bold; */
-}
-nav ul li:nth-child(5) a {
-  border: 2px solid rgb(121, 121, 121);
-  border-radius: 5px;
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-footer {
-   background-color: rgba(180, 180, 180, 0.274);
-  /* background-color: whitesmoke; */
-  color: black;
-  text-align: center;
-  padding: 1em 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.footer-content ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.footer-content ul.socials {
-  display: flex;
-  justify-content: center;
-  padding-top: 0.5em;
-}
-
-.footer-content ul.socials li {
-  margin: 0 0.5em;
-}
-
-.footer-content ul.socials li a {
-  color: black;
-  text-decoration: none;
-}
-.policy ul{
-   list-style-type: none;
-   
-}
-.policy ul li{
-  margin: 4px 10px;
-  float: left;
-}
-.policy ul li a{
-  text-decoration: none;
-  color: black;
-  
-}
-.policy ul li a:hover{
-  text-decoration: underline;
-  color: black;
-  
-}
-main{
-  height: 100vh;
+  color: rgb(83, 83, 83);
+  font-size: medium;
 }
