--- a/product/products.css
+++ b/product/products.css
@@ -2,9 +2,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 
 header {
@@ -13,7 +14,7 @@ header {
   margin: 1rem;
 }
 nav {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,6 +34,11 @@ nav ul {
   display: flex;
   align-items: center;
   gap: 1.5rem;
+  /* border: 2px solid black; */
+  border-radius: 10px;
+  padding: 0.5rem;
+  margin: 0px;
+  /* background-color: rgba(239, 239, 239, 0.759); */
 }
 nav ul li {
   list-style: none;
@@ -45,4 +51,54 @@ nav ul li a {
   text-decoration: none;
   color: rgb(83, 83, 83);
   font-size: medium;
+}
+nav ul li:hover {
+  background-color: rgb(208, 208, 208);
+}
+
+main {
+  /* border: 2px solid black; */
+  width: 70%;
+}
+.itemDiv {
+  margin: 0.5rem;
+}
+.cardDiv {
+  /* margin: 2em; */
+  display: grid;
+  width: 100%;
+  grid-template-columns: auto auto auto auto;
+ 
+  /* border: 1px solid black; */
+}
+.card {
+  width: 200px;
+  /* border: 1px solid black; */
+  padding: 0.5rem;
+}
+.itemName{
+  margin: 0.5rem;
+  margin-left: auto;
+}
+.itemName:hover{
+  cursor: pointer;
+  color: rgb(135, 135, 135);
+}
+.itemPrice{
+  margin: 0.5rem;
+  font-size: medium;
+  margin-left: auto;
+}
+.itemDescription {
+  font-size: small;
+}
+.imgDiv {
+  width: fit-content;
+  border-radius: 10px;
+  /* border: 2px solid red; */
+  overflow: hidden; /* Hide any overflow content */
+  position: relative;
+}
+details{
+  font-size: smaller;
 }
