--- a/admin/admin.css
+++ b/admin/admin.css
@@ -53,13 +53,13 @@ nav ul li:active {
   margin: 1.2rem;
 }
 .offers-div {
-  display: block;
+  display: none;
 }
 .users-div {
   display: none;
 }
 .product-div {
-  display: none;
+  display: block;
 }
 .cardDiv {
   /* margin: 2em; */
@@ -118,6 +118,58 @@ td {
 }
 details {
   font-size: smaller;
+}
+.addProduct{
+  display: flex;
+  padding: 1.5rem;
+  gap: 1.3rem;
+  position: fixed;
+  left: 35vw;
+  right: 50vw;
+  top: 20vh;
+  z-index:  11;
+  width: fit-content;
+  height: fit-content;
+  background-color: rgb(255, 255, 255);
+    flex-direction: column;
+    border: 1px solid rgb(179, 179, 179);
+    border-radius: 10px;
+    display: none;
+}
+.nameDiv ,.categoriesDiv {
+  display: flex;
+  /* align-items: center; */
+  justify-content: left;
+  flex-direction: column;
+}
+.valuesDiv{
+   display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 1rem;
+  flex-direction: row;
+}
+input{
+  width: 15rem;
+  background-color: transparent;
+  height: 1.5rem;
+  border: 1px solid rgb(171, 171, 171);
+  border-radius: 5px;
+  padding: 0.5em;
+  /* text-transform: lowercase; */
+}
+#price, #calories{
+  width: 5rem;
+}
+#submit{
+  width: 5rem;
+  height: 2rem;
+}
+.formitemName,.formCategoriesName, .formPriceValue, .formCalValue, .formDestitle{
+  width: 100%;
+  text-align: left;
+  margin: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 @media only screen and (max-width: 1200px) {
   .cardDiv {
