--- a/item/item.css
+++ b/item/item.css
@@ -80,6 +80,14 @@ ul li a {
     border: 1px solid black;
     background-color: transparent;
     padding: 0.5rem;
+    border-radius: 5px;
+    height: 3rem;
+
+}
+
+.orderBtn:hover{
+  cursor: pointer;
+  background-color: rgb(222, 222, 222);
 }
 .itemValues{
     display: flex;
@@ -88,4 +96,75 @@ ul li a {
 }
 .cal{
     font-size: smaller;
+}
+
+
+.addProduct{
+  display: flex;
+  padding: 1.5rem;
+  gap: 1.3rem;
+  position: fixed;
+  left: 35vw;
+  /* right: 50vw; */
+  top: 15vh;
+  z-index:  11;
+  width: fit-content;
+  height: fit-content;
+  background-color: rgb(255, 255, 255);
+    flex-direction: column;
+    border: 1px solid rgb(179, 179, 179);
+    border-radius: 10px;
+    display: none;
+}
+.nameDiv ,.categoriesDiv {
+  display: flex;
+  /* align-items: center; */
+  justify-content: left;
+  flex-direction: column;
+}
+.valuesDiv{
+   display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 1rem;
+  flex-direction: row;
+}
+input{
+  width: 15rem;
+  background-color: transparent;
+  height: 1.5rem;
+  border: 1px solid rgb(171, 171, 171);
+  border-radius: 5px;
+  padding: 0.5em;
+  /* text-transform: lowercase; */
+}
+#price, #calories{
+  width: 5rem;
+}
+#submit{
+  width: 5rem;
+  height: 2rem;
+}
+.formQuaValue,.formitemName,.formCategoriesName, .formPriceValue, .formCalValue, .formDestitle{
+  width: 100%;
+  text-align: left;
+  margin: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.counter{
+  display: flex;
+  gap: 10px;
+  
+}
+.counterBtns{
+  display: flex;
+  width: fit-content;
+  height: inherit;
+  padding: 0.7rem;
+  gap:10px
+}
+.counterValue{
+  padding: 0%;
+  margin: 0%;
+  /* height: 10px; */
 }
