--- a/item/item.css
+++ b/item/item.css
@@ -128,6 +128,20 @@ ul li a {
   justify-content: left;
   gap: 1rem;
   flex-direction: row;
+  
+  margin: 4px;
+  margin-top:0px ;
+  /* background-color: rgb(235, 235, 235); */
+}
+.productNameDiv{
+     display: flex;
+  align-items: center;
+  justify-content: left;
+  /* gap: 1rem; */
+  flex-direction: column;
+  padding-left : 0.5rem;
+   /* background-color: rgb(235, 235, 235); */
+   margin-left: 5px;
 }
 input{
   width: 15rem;
@@ -145,12 +159,21 @@ input{
   width: 5rem;
   height: 2rem;
 }
-.formQuaValue,.formitemName,.formCategoriesName, .formPriceValue, .formCalValue, .formDestitle{
+.formQuaValue,.formitemName,.formCategoriesName,.ProductName, .formPriceValue,.ProductNameValue, .formCalValue, .formDestitle{
   width: 100%;
   text-align: left;
   margin: 0.5rem;
   margin-bottom: 0.5rem;
+  
 }
+/* .ProductName{
+  color: rgb(56, 56, 56);
+   width: 100%;
+  text-align: left;
+  margin: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+} */
 .counter{
   display: flex;
   gap: 10px;
